implementacion endpoint delete

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body onload="initApp()">
     <div class="container">
-      <h1>Usuarios IUPA</h1>
+      <h1 style="margin-bottom: 25px">Usuarios IUPA</h1>
       <div class="panel panel-default">
         <div class="panel-heading">Lista Usuarios</div>
         <div class="panel-body" id="contentTable"></div>
