Agrego margin-top a Name y Age en lista

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,20 @@
       crossorigin="anonymous"
     />
   </head>
+  <style>
+    div.row:nth-child(even) {
+      background: hsl(0, 0%, 93%);
+    }
+    div.row:nth-child(odd) {
+      background: hsl(0, 0%, 98%);
+    }
+    div.txtName {
+      margin-top: 6px;
+    }
+    div.txtAge {
+      margin-top: 6px;
+    }
+  </style>
   <body onload="initApp()">
     <div class="container">
       <h1 style="margin-bottom: 25px">Usuarios IUPA</h1>
